[gd_scene load_steps=28 format=2]

[ext_resource path="res://Fotos/Seta.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Roboto_greek/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Bryce/Bryce.png" type="Texture" id=3]
[ext_resource path="res://UI/PlayerTurnHUD/PlayerTurnContainer.gd" type="Script" id=4]
[ext_resource path="res://Fotos/HouseButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/characterSelected.png" type="Texture" id=6]
[ext_resource path="res://Fotos/DiceButtonDisabled.png" type="Texture" id=7]
[ext_resource path="res://Fotos/DiceButton.png" type="Texture" id=8]
[ext_resource path="res://Fotos/DiceButtonSelected.png" type="Texture" id=9]
[ext_resource path="res://UI/PlayerTurnHUD/DiceButton.gd" type="Script" id=10]
[ext_resource path="res://Fotos/HouseButtonSelected.png" type="Texture" id=11]
[ext_resource path="res://UI/PlayerTurnHUD/showPlayerHouse.gd" type="Script" id=12]
[ext_resource path="res://Fotos/star.png" type="Texture" id=13]
[ext_resource path="res://UI/Keyboard/Shortcut_enter.tscn" type="PackedScene" id=14]
[ext_resource path="res://Languages/TranslationManager.tscn" type="PackedScene" id=15]
[ext_resource path="res://UI/PlayerTurnHUD/TranslationManager.gd" type="Script" id=16]
[ext_resource path="res://UI/PlayerTurnHUD/playerProgressBar.gd" type="Script" id=17]
[ext_resource path="res://Fotos/placeHolderProgressBar.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=10]
size = 9
outline_size = 1
outline_color = Color( 0.894118, 0.388235, 0.054902, 1 )
extra_spacing_char = 4
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Win"
length = 3.2
tracks/0/type = "value"
tracks/0/path = NodePath("Star1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.6, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Star1:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 34 ), Vector2( 0, 14 ), Vector2( 0, 34 ), Vector2( 0, 14 ), Vector2( 0, 34 ), Vector2( 0, 14 ), Vector2( 0, 34 ), Vector2( 0, 14 ), Vector2( 0, 34 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Star2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.6, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Star2:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 256, 34 ), Vector2( 256, 14 ), Vector2( 256, 34 ), Vector2( 256, 14 ), Vector2( 256, 34 ), Vector2( 256, 14 ), Vector2( 256, 34 ), Vector2( 256, 14 ), Vector2( 256, 34 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 5
outline_color = Color( 0.894118, 0.388235, 0.054902, 1 )
extra_spacing_char = 6
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 9
outline_size = 1
outline_color = Color( 0.894118, 0.388235, 0.054902, 1 )
extra_spacing_char = 6
font_data = ExtResource( 2 )

[sub_resource type="InputEventKey" id=11]

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 11 )

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Control/VBoxContainer/Arrow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.666667 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Control/VBoxContainer/Arrow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.486275 ), Color( 1, 1, 1, 0.958333 ) ]
}

[sub_resource type="Animation" id=9]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Control/VBoxContainer/Arrow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="PlayerTurnContainer_smaller" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -361.0
margin_top = -300.0
margin_right = -211.0
margin_bottom = -104.0
rect_scale = Vector2( 0.996413, 1.16 )
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 40.9767 ]
}

[node name="TranslationManager" parent="." instance=ExtResource( 15 )]
script = ExtResource( 16 )
turn = NodePath("../VBoxContainer2/Control/VBoxContainer/TurnText")
objects = NodePath("../HBoxContainer/Label")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 150.0
margin_bottom = 27.0
size_flags_vertical = 6
custom_constants/separation = -32

[node name="Star1" type="TextureRect" parent="HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 34.0
margin_right = 50.0
margin_bottom = 84.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 6
size_flags_vertical = 2
texture = ExtResource( 13 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 10.0
margin_right = 140.0
margin_bottom = 27.0
rect_min_size = Vector2( 130, 20 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 2.94
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "0 / 8 
OBJECTS"
align = 1
autowrap = true

[node name="Star2" type="TextureRect" parent="HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 256.0
margin_top = 34.0
margin_right = 306.0
margin_bottom = 84.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 6
size_flags_vertical = 2
texture = ExtResource( 13 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer"]
anims/Win = SubResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_top = 31.0
margin_right = 150.0
margin_bottom = 215.0
size_flags_horizontal = 6
custom_constants/separation = -3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer2"]
margin_left = 37.0
margin_right = 112.0
margin_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 2.42
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="VBoxContainer2/CenterContainer"]
margin_right = 75.0
margin_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 75, 75 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="TextureButton" type="TextureButton" parent="VBoxContainer2/CenterContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 72.0
margin_bottom = 72.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 12 )

[node name="PlayerProgress" type="TextureProgress" parent="VBoxContainer2/CenterContainer"]
visible = false
margin_left = -88.0
margin_top = -88.0
margin_right = 162.0
margin_bottom = 162.0
size_flags_horizontal = 6
size_flags_vertical = 6
max_value = 8.0
texture_under = ExtResource( 18 )
texture_progress = ExtResource( 18 )
fill_mode = 4
tint_under = Color( 0.690196, 0.678431, 0.670588, 1 )
tint_progress = Color( 0.321569, 0.309804, 0.301961, 1 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="VBoxContainer2/CenterContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 72.0
margin_bottom = 72.0
rect_min_size = Vector2( 70, 70 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Control" type="Control" parent="VBoxContainer2"]
margin_top = 72.0
margin_right = 150.0
margin_bottom = 112.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TurnBackground" type="ColorRect" parent="VBoxContainer2/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
size_flags_horizontal = 3
size_flags_vertical = 6
color = Color( 1, 0.819608, 0.701961, 0.835294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
size_flags_horizontal = 6
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="VBoxContainer2/Control/VBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.857143 )
margin_left = 85.0
margin_right = 185.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="PlayerName" type="Label" parent="VBoxContainer2/Control/VBoxContainer"]
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "Player x"
align = 1
valign = 1
autowrap = true

[node name="TurnText" type="Label" parent="VBoxContainer2/Control/VBoxContainer"]
margin_top = 24.0
margin_right = 150.0
margin_bottom = 44.0
rect_min_size = Vector2( 100, 20 )
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 2.94
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "It's Your Turn"
align = 1
autowrap = true

[node name="DiceButton" type="TextureButton" parent="VBoxContainer2"]
modulate = Color( 1, 1, 1, 0.857143 )
margin_left = 37.0
margin_top = 109.0
margin_right = 112.0
margin_bottom = 184.0
rect_min_size = Vector2( 75, 75 )
size_flags_horizontal = 6
size_flags_vertical = 6
shortcut = SubResource( 6 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 7 )
expand = true
stretch_mode = 4
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer2/DiceButton"]
anims/Still = SubResource( 7 )
anims/blink = SubResource( 8 )
anims/disappear = SubResource( 9 )

[node name="HBoxContainer2" parent="VBoxContainer2/DiceButton" instance=ExtResource( 14 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -29.0
margin_right = -24.0
margin_bottom = -6.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" parent="VBoxContainer2/DiceButton/HBoxContainer2" index="1"]
margin_right = -58.0
margin_bottom = -50.0

[connection signal="pressed" from="VBoxContainer2/CenterContainer/Button" to="VBoxContainer2/CenterContainer/TextureButton" method="show_house"]
[connection signal="mouse_entered" from="VBoxContainer2/DiceButton" to="VBoxContainer2/DiceButton" method="_on_DiceButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer2/DiceButton" to="VBoxContainer2/DiceButton" method="_on_DiceButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer2/DiceButton" to="VBoxContainer2/DiceButton" method="show_dice_screen"]

[editable path="VBoxContainer2/DiceButton/HBoxContainer2"]
